# tgclip

./: .gitignore  README.md  pyproject.toml
src/tgclip/: clipboard.py  config.py  main.py  telegram.py  ui.py  utils.py
